--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,12 +16,13 @@
     "@repo/database": "workspace:*",
     "@repo/design-system": "workspace:*",
     "@repo/env": "workspace:*",
+    "@repo/next-config": "workspace:*",
     "@repo/observability": "workspace:*",
     "@sentry/nextjs": "^8.37.1",
-    "@repo/next-config": "workspace:*",
+    "@neondatabase/serverless": "^0.10.3",
     "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-ed15d500-20241110",
+    "react-dom": "19.0.0-rc-ed15d500-20241110",
     "svix": "^1.39.0"
   },
   "devDependencies": {
